Added Obsidian ToC plugin

--- a/notes/1733562567-draft.md
+++ b/notes/1733562567-draft.md
@@ -6,67 +6,64 @@ tags: []
 authors:
   - phuwasate
 created: Sat 07 Dec 2024 04:09:27 PM +07
-modified: Sat 07 Dec 2024 08:49:48 PM +07
+modified: Sun 08 Dec 2024 11:17:57 AM +07
 ---
 
 # Draft
-
-<!--toc:start-->
-- [Draft](#draft)
-  - [Overview Gameplay](#overview-gameplay)
-  - [UI](#ui)
-    - [Gameplay Screen](#gameplay-screen)
-      - [Top Bar](#top-bar)
-      - [Under Top Bar](#under-top-bar)
-      - [Bottom Panel](#bottom-panel)
-        - [Party Members Display](#party-members-display)
-          - [Party Member Selection](#party-member-selection)
-        - [Spell Icons](#spell-icons)
-    - [Menus](#menus)
-      - [Character Menus Navigation](#character-menus-navigation)
-        - [Character Menus](#character-menus)
-          - [Character Menus Top Pane](#character-menus-top-pane)
-      - [Hamburger Menu](#hamburger-menu)
-      - [Game Mode Menu](#game-mode-menu)
-      - [Achievement Menu](#achievement-menu)
-      - [Character Stats Menu](#character-stats-menu)
-      - [Character Spells Tree](#character-spells-tree)
-      - [Spell Information Menu](#spell-information-menu)
-      - [Character Class Tree](#character-class-tree)
-      - [Settings Menu](#settings-menu)
-    - [Leaderboard](#leaderboard)
-  - [Control](#control)
-    - [Movement](#movement)
-    - [Options](#options)
-  - [Power Ups](#power-ups)
-  - [Character Classes](#character-classes)
-  - [Game Modes](#game-modes)
-    - [Story](#story)
-    - [Raid Boss](#raid-boss)
-    - [Mini Game](#mini-game)
-    - [Offline PvP](#offline-pvp)
-  - [Maps](#maps)
-  - [Enemies](#enemies)
-    - [Minions](#minions)
-      - [Humans](#humans)
-      - [Monsters](#monsters)
-      - [Animals](#animals)
-      - [Orcs](#orcs)
-      - [Undeads](#undeads)
-      - [Dragons](#dragons)
-    - [Bosses](#bosses)
-  - [Character Stats](#character-stats)
-    - [Character Meta Stats](#character-meta-stats)
-    - [Character Actual Stats](#character-actual-stats)
-  - [Limitations](#limitations)
-  - [Miscellaneous](#miscellaneous)
-<!--toc:end-->
 
 **Reference:** [Nomad Idle](https://thefoxknocks.itch.io/nomad-idle)
 **Reference Picture:** ![nomad-idle-gameplay.png](assets/imgs/nomad-idle-gameplay.png)
 **Platform:** Mobile Vertical
 
 > Inspired by [JRPG](https://www.google.com/search?q=jrpg)
+
+- [[#Overview Gameplay|Overview Gameplay]]
+- [[#UI|UI]]
+  - [[#UI#Gameplay Screen|Gameplay Screen]]
+    - [[#Gameplay Screen#Top Bar|Top Bar]]
+    - [[#Gameplay Screen#Under Top Bar|Under Top Bar]]
+    - [[#Gameplay Screen#Bottom Panel|Bottom Panel]]
+      - [[#Bottom Panel#Party Members Display|Party Members Display]]
+        - [[#Party Members Display#Party Member Selection|Party Member Selection]]
+      - [[#Bottom Panel#Spell Icons|Spell Icons]]
+  - [[#UI#Menus|Menus]]
+    - [[#Menus#Character Menus Navigation|Character Menus Navigation]]
+      - [[#Character Menus Navigation#Character Menus|Character Menus]]
+        - [[#Character Menus#Character Menus Top Pane|Character Menus Top Pane]]
+    - [[#Menus#Hamburger Menu|Hamburger Menu]]
+    - [[#Menus#Game Mode Menu|Game Mode Menu]]
+    - [[#Menus#Achievement Menu|Achievement Menu]]
+    - [[#Menus#Character Stats Menu|Character Stats Menu]]
+    - [[#Menus#Character Spells Tree|Character Spells Tree]]
+    - [[#Menus#Spell Information Menu|Spell Information Menu]]
+    - [[#Menus#Character Class Tree|Character Class Tree]]
+    - [[#Menus#Settings Menu|Settings Menu]]
+  - [[#UI#Leaderboard|Leaderboard]]
+- [[#Control|Control]]
+  - [[#Control#Movement|Movement]]
+  - [[#Control#Options|Options]]
+- [[#Power Ups|Power Ups]]
+- [[#Character Classes|Character Classes]]
+- [[#Game Modes|Game Modes]]
+  - [[#Game Modes#Story|Story]]
+  - [[#Game Modes#Raid Boss|Raid Boss]]
+  - [[#Game Modes#Mini Game|Mini Game]]
+  - [[#Game Modes#Offline PvP|Offline PvP]]
+- [[#Maps|Maps]]
+- [[#Enemies|Enemies]]
+  - [[#Enemies#Minions|Minions]]
+    - [[#Minions#Humans|Humans]]
+    - [[#Minions#Monsters|Monsters]]
+    - [[#Minions#Animals|Animals]]
+    - [[#Minions#Orcs|Orcs]]
+    - [[#Minions#Undeads|Undeads]]
+    - [[#Minions#Dragons|Dragons]]
+  - [[#Enemies#Bosses|Bosses]]
+- [[#Character Stats|Character Stats]]
+  - [[#Character Stats#Character Meta Stats|Character Meta Stats]]
+  - [[#Character Stats#Character Actual Stats|Character Actual Stats]]
+- [[#Limitations|Limitations]]
+- [[#Miscellaneous|Miscellaneous]]
 
 ## Overview Gameplay
 
